# lfu_cache

./: CMakeLists.txt  README.md  lfu_cache.hpp  test_gen.py
belady/: CMakeLists.txt  belady_cache.cpp  belady_cache.hpp
lfu/: CMakeLists.txt  lfu_cache.cpp  lfu_cache.hpp
tests/: answer.txt  answers.out  test.sh  test_01.in  test_01.txt  test_02.in  test_02.txt  test_03.in  test_03.txt  test_04.in  test_04.txt  test_05.in  test_05.txt  test_06.in  test_06.txt  test_07.in  test_07.txt  test_08.in  test_08.txt  test_09.in  test_09.txt  test_10.in  test_10.txt  test_gen.py
